2016-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated NEWS with changes since last release.

	* www/security.rst: Add a page about GraphicsMagick security.

2016-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Over-aggressive error reporting
	was causing failures when elements were "drawn" off-image.
	Resolves SourceForge issue #389 "Non-conforming drawing primitive
	definition (line)".

2016-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix problem while reading file
	"tnamkejarz.svg.2532308010849170049" provided via private email
	from Gustavo Grieco on May 31, 2016.

	* magick/utility.c (MagickGetToken): Fix problem while reading
	file "vqxwatmqmi.svg.-3669039972557308254" provided via private
	email from Gustavo Grieco on May 31, 2016.

2016-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update for 1.3.24 release.

	* www/Changes.rst: Mention 1.3.24 release.

	* www/index.rst: Update for 1.3.24 release.

	* version.sh: Update library ABI information in preparation for
	1.3.24 release.

	* NEWS.txt: Updated NEWS to reflect fixes and issues.

2016-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with latest news.

	* magick/blob.c (OpenBlob): Remove support for reading input from
	a shell command, or writing output to a shell command, by
	prefixing the specified filename (containing the command) with a
	'|'.  This feature provided a remote shell execution opportunity
	(CVE-2016-5118).

	* coders/mat.c (ReadMATImage): Validate that MAT frames is not
	zero.

2016-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Be less optimistic when estimating
	the number of points required to represent a path.  This should
	help address CVE-2016-2317 "Heap buffer overflow".  This resolves
	SourceForge issue #275 "Applying Clipping Path to high resolution
	JPG".
